# trading-bot

./: .env.dist  .env.prod.dist  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
buildfiles/: Dockerfile  redis.conf
migrations/versions/: 122298cb8a21_.py
src/: configuration.py
src/admin/: auth.py  main.py  settings.py  views.py
src/bot/: __main__.py  dispatcher.py
src/bot/filters/: admin_filter.py
src/bot/logic/: __init__.py  help.py  start.py
src/bot/logic/admin/: __init__.py  dashboard.py  router.py
src/bot/middlewares/: role.py  translator_md.py
src/bot/structures/: data_structure.py
src/bot/structures/fsm/: registration.py
src/bot/structures/keyboards/: common.py
src/cache/: adapter.py
src/db/: database.py
src/db/models/: __init__.py  user.py
src/db/repositories/: __init__.py  abstract.py  user.py
src/language/: enums.py  translator.py
src/language/locales/: ru.ftl  uz.ftl
src/utils/: bybit_api.py
